--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		
+		<dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        	<artifactId>selenium-firefox-driver</artifactId>
+    	</dependency>	
 	</dependencies>
 
 	<build>
